Support Android x-path in 'takeVHSes.js' (#874)
* Support Android x-path in 'takeVHSes.js'

* implement waitForNative functionality

* core: refactor element lookup w/ retry for ufg-native to be more idiomatic

* pending-changes: /IOS/iOS/

Co-authored-by: Dave Haeffner <dhaeffner@gmail.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,7 +10,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Support Android x-path in 'takeVHSes.js' (was 'accessibility id', iOS logic not changed)
 "@applitools/eyes-selenium":
   feature:
     - 
