Fix Appium settings/caps in universal (#876)
* uni: fixes for Android when the ufg lib can't operate due to target
elements being invisible and invalid capabilities being returned on
iOS

* se-uni: add support for local appium to the APPLITOOLS_TEST_REMOTE env var (e.g., "appium")

* se-uni: ported ufg native ios test over and added scripts to run it since there is a magic env variable required

--- a/packages/eyes-selenium-universal/package.json
+++ b/packages/eyes-selenium-universal/package.json
@@ -34,6 +34,9 @@
     "test": "yarn build:dist && yarn test:coverage",
     "test:test": "yarn generate:tests && mocha --no-timeouts ./test/generic/CheckWindowWithCssStitching.spec.js",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
+    "test:ufg_native": "mocha --no-timeouts test/e2e/ufg-native.spec.js",
+    "test:ufg_native:sauce": "APPLITOOLS_TEST_REMOTE=sauce yarn test:ufg_native",
+    "test:ufg_native:appium": "APPLITOOLS_TEST_REMOTE=appium yarn test:ufg_native",
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-selenium-universal'",
     "setup": "yarn docker:setup",
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
