vgc: support version for deviceInfo due to inconsistency in the device types, need to unify them (later)

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,7 +10,8 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - |
+      Support `version` in deviceInfo options
 "@applitools/eyes-selenium":
   feature:
     - 
