se-uni: fix scripts to run ufg native test on different envrionments, and update universal-server dep

--- a/packages/eyes-selenium-universal/package.json
+++ b/packages/eyes-selenium-universal/package.json
@@ -34,9 +34,8 @@
     "test": "yarn build:dist && yarn test:coverage",
     "test:test": "yarn generate:tests && mocha --no-timeouts ./test/generic/CheckWindowWithCssStitching.spec.js",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
-    "test:ufg_native": "mocha --no-timeouts test/e2e/ufg-native.spec.js",
-    "test:ufg_native:sauce": "APPLITOOLS_TEST_REMOTE=sauce yarn test:ufg_native",
-    "test:ufg_native:appium": "APPLITOOLS_TEST_REMOTE=appium yarn test:ufg_native",
+    "test:ufg_native": "APPLITOOLS_TEST_REMOTE=appium mocha --no-timeouts test/e2e/ufg-native.spec.js",
+    "test:ufg_native:sauce": "APPLITOOLS_TEST_REMOTE=sauce mocha --no-timeouts test/e2e/ufg-native.spec.js",
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-selenium-universal'",
     "setup": "yarn docker:setup",
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
@@ -51,7 +50,7 @@
   },
   "dependencies": {
     "@applitools/eyes-api": "1.3.0",
-    "@applitools/eyes-universal": "2.2.1",
+    "@applitools/eyes-universal": "2.2.4",
     "@applitools/spec-driver-selenium": "1.3.5",
     "@applitools/types": "1.3.1",
     "@applitools/utils": "1.2.14",
