--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^7.0.4",
     "mocha": "^9.0.0",
     "pkg": "^5.3.2",
     "prettier": "^2.1.2",
@@ -86,5 +87,10 @@
   },
   "engines": {
     "node": ">=14.15.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn bongo lint"
+    }
   }
 }
