pending-changes: fix invalid entry

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -109,8 +109,10 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 'batch.properties' and 'batch.notifyOnCompletion' not propagated correctly.
-    - 'batch.name' was overridden in case 'batch.id' was not defined
+    - |
+      'batch.properties' and 'batch.notifyOnCompletion' not propagated correctly
+    - |
+      'batch.name' was overridden in case 'batch.id' was not defined
 "@applitools/eyes-storybook":
   feature:
     - 
