uni: in spec-driver/webdriver.ts, fix `isChrome` lookup in `transformDriver` and improve `getCapabilities`.
Specifically:
- prefer `browser.capabilities` if present
- try `browser.getSession` as a fallback
- added error handling

re: the error handling, `getSession` is not a supported command in W3C mode, it's just for
the JSON Wire Protocol (see https://webdriver.io/docs/api/jsonwp/#getsession) but it's an
available function regardless of W3C true/false.

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fix non-W3C command being called when in W3C mode
 "@applitools/eyes-selenium":
   feature:
     - 
