uni: restore browser.getSession() as the default, and return browser.capabilities when reaching the non-standard W3C command error. Fixes regression that caused `AppiumIOSCheckWindowRegionWithScrollAndPageCoverage` to start failing due to a `Screenshot region is out of viewport` error.
When comparing the difference in the output between
`browser.getSession()` and `browser.capabilities` for this test, I see that
there is information which we populate that is only available in
`getSession` which is relevant for the SDK to function.

E.g.,
```
  pixelRatio: 3,
  statBarHeight: 47,
  viewportRect: { left: 0, top: 141, width: 1170, height: 2391 }
```

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fix regression introduced when looking up driver capabilities
 "@applitools/eyes-selenium":
   feature:
     - 
