Improve isElementScrollable snippet (#839)
* snippets: improve isElementScrollable so it checks the overflow x/y attributes of an element to see if they are set to scroll or auto (in addition to checking scroll width/height against client width/height) to help address false positives

* NO_CHANGELOG

* snippets: update isElementScrollable to also check for overflow: hidden

Fixes screenshoter/test/e2e/web/inner-element-fully.spec.js and the following
coverage tests:
- CheckRegionBySelectorInFrameFullyWithCssStitching.spec.js
- CheckRegionBySelectorInFrameFullyWithCssStitchingClassic.spec.js
- CheckRegionBySelectorInFrameFullyWithScrollStitching.spec.js
- CheckRegionBySelectorInFrameFullyWithScrollStitchingClassic.spec.js
- CheckRegionBySelectorInFrameFullyOnFirefoxLegacy.spec.js
- CheckRegionBySelectorInFrameMultipleTimesWithCssStitching.spec.js
- CheckRegionBySelectorInFrameMultipleTimesWithScrollStitching.spec.js
- ShouldHideAndRestoreScrollbarsWithCssStitching.spec.js
- ShouldHideAndRestoreScrollbarsWithScrollStitching.spec.js
- ShouldSendDomAndLocationWhenCheckRegionBySelectorFully.spec.js

* snippets: add test for isElementScrollable that addresses the use case that lead to these improvements

* add entry to pending changes

* Fix/screenshoter off by one error (#856)

* screenshoter: clean up e2e test

* screenshoter: add compensation to fix off-by-one error that can occur in
takeStitchedScreenshot due to rounding

* screenshoter: add element fully test for off-by-one use case

* Revert "screenshoter: clean up e2e test"

This reverts commit 88f5279c1df3f6763b1846cec0ac04f4357ee2e5.

* screenshoter: fix element-fully tests so they work together (sharing browser state seems to not play nicely when navigating to a data url) and added logging for the compensation values

* snippets: cleanup isElementScrollable snippet and add firefox coverage
for it

* update pending-changes copy per feedback

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,12 +12,12 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed check region fully in classic execution when using CSS stitching
 "@applitools/eyes-selenium":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed check region fully in classic execution when using CSS stitching
 "@applitools/eyes-webdriverio":
   feature:
     - Support UFG for native mobile
@@ -25,8 +25,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
-    - when running on a native iOS app, allow capturing NavigationBar and TabBar regions
-    - When running a native app on Android, in case we test a device in landscape mode, make sure to account for the navigation bar on the left or right and not at the bottom of the image.
+    - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
 "@applitools/eyes-playwright":
   feature:
@@ -41,8 +40,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
-    - when running on a native iOS app, allow capturing NavigationBar and TabBar regions
-    - When running a native app on Android, in case we test a device in landscape mode, make sure to account for the navigation bar on the left or right and not at the bottom of the image.
+    - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
 "@applitools/eyes-protractor":
   feature:
@@ -57,8 +55,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
-    - when running on a native iOS app, allow capturing NavigationBar and TabBar regions
-    - When running a native app on Android, in case we test a device in landscape mode, make sure to account for the navigation bar on the left or right and not at the bottom of the image.
+    - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
 "@applitools/eyes-puppeteer":
   feature:
@@ -73,8 +70,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
-    - when running on a native iOS app, allow capturing NavigationBar and TabBar regions
-    - When running a native app on Android, in case we test a device in landscape mode, make sure to account for the navigation bar on the left or right and not at the bottom of the image.
+    - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
 "@applitools/eyes-testcafe":
   feature:
@@ -102,8 +98,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
-    - when running on a native iOS app, allow capturing NavigationBar and TabBar regions
-    - When running a native app on Android, in case we test a device in landscape mode, make sure to account for the navigation bar on the left or right and not at the bottom of the image.
+    - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
 "@applitools/eyes-cypress":
   feature:
@@ -121,6 +116,7 @@ Apollo SDK:
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
+    - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
 eyes-browser-extension:
   feature:
@@ -128,6 +124,7 @@ eyes-browser-extension:
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
+    - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
 applitools-for-selenium-ide:
   feature:
