Account for an Appium bug when calculating system bars height (#880)
* move the logic to account for orientation when calculating the system bars to driver form spec-driver and implement setOrientation in spec-driver wdio and universal

* fix return value of setOrientation in driver

* add setOrientation to universal webdriver

* use navigationBar width in landscape mode instead of fliping the device

* update getBarsHeight name to getBarsSize

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Account for an Appium bug when calculating system bars height
 "@applitools/eyes-selenium":
   feature:
     - 
@@ -27,6 +27,7 @@ Apollo SDK:
     - accept ios and android lowercase as driver platformName capability when using custom grid
     - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
+    - Account for an Appium bug when calculating system bars height
 "@applitools/eyes-playwright":
   feature:
     - Support UFG for native mobile
