--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -106,6 +106,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
+    - update the README entry 'saveNewTests'
     - added `properties` and `notifyOnCompletion` as optional Types of Batch (for TS)
 "@applitools/eyes-storybook":
   feature:
