Make sure android platformName always starts with uppercase (#890)
* make sure android platformName always starts with uppercase

* support keepPlatformNameAsIs once running under JS

* adjust tests

* 1. remove keepPlatformNameAsIs from eyes-api configuration
2. improve types for driver custom config
3. always pass keepPlatformNameAsIs: true from eyes-api

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>
Co-authored-by: Chaim Aharonson <chaim.aharonson@applitools.com>
Co-authored-by: Amit Zur <amit.zur@applitools.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -13,6 +13,7 @@ Apollo SDK:
     - 
   bug-fix:
     - Account for an Appium bug when calculating system bars height
+    - Make sure android platformName starts with uppercase if `config.keepPlatformNameAsIs` is set to true
 "@applitools/eyes-selenium":
   feature:
     - 
