--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,8 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - |
+      Make sure `ios` platformName is changed to `iOS` (fixing a bug in Java Appium)
 "@applitools/eyes-selenium":
   feature:
     - 
