--- a/packages/execution-grid-client/package.json
+++ b/packages/execution-grid-client/package.json
@@ -42,16 +42,17 @@
     "@applitools/logger": "1.1.1",
     "@applitools/utils": "1.2.14",
     "http-proxy": "1.18.1",
-    "node-fetch": "3.2.4",
+    "node-fetch": "2.6.7",
     "raw-body": "2.5.1",
     "yargs": "17.4.1"
   },
   "devDependencies": {
     "@applitools/bongo": "^2.0.3",
-    "@applitools/eg-demo": "1.0.2",
+    "@applitools/eg-demo": "^1.0.2",
     "@types/http-proxy": "^1.17.8",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.31",
+    "@types/node-fetch": "^2.6.1",
     "@types/selenium-webdriver": "^4.0.19",
     "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
