--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -15,17 +15,20 @@ Apollo SDK:
     - 
 "@applitools/eyes-selenium":
   feature:
-    - 
+    - |
+      Support iPhone SE `IosDeviceName.iPhone_SE` and iPhone 8 Plus `IosDeviceName.iPhone_8_Plus` iOS devices
   bug-fix:
     - Fixed check region fully in classic execution when using CSS stitching
 "@applitools/eyes-webdriverio":
   feature:
-    - 
+    - |
+      Support iPhone SE `IosDeviceName.iPhone_SE` and iPhone 8 Plus `IosDeviceName.iPhone_8_Plus` iOS devices
   bug-fix:
     - 
 "@applitools/eyes-playwright":
   feature:
-    - 
+    - |
+      Support iPhone SE `IosDeviceName.iPhone_SE` and iPhone 8 Plus `IosDeviceName.iPhone_8_Plus` iOS devices
   bug-fix:
     - 
 "@applitools/eyes-protractor":
@@ -33,6 +36,8 @@ Apollo SDK:
     - Support UFG for native mobile
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
+    - |
+      Support iPhone SE `IosDeviceName.iPhone_SE` and iPhone 8 Plus `IosDeviceName.iPhone_8_Plus` iOS devices
   bug-fix:
     - |
       `runner.getAllTestResults` now aborts unclosed tests
@@ -48,6 +53,8 @@ Apollo SDK:
     - Support UFG for native mobile
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
+    - |
+      Support iPhone SE `IosDeviceName.iPhone_SE` and iPhone 8 Plus `IosDeviceName.iPhone_8_Plus` iOS devices
   bug-fix:
     - |
       `runner.getAllTestResults` now aborts unclosed tests
@@ -64,6 +71,8 @@ Apollo SDK:
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
     - Support `failTestcafeOnDiff` as environment variable `APPLITOOLS_FAIL_TESTCAFE_ON_DIFF`
+    - |
+      Support iPhone SE `IosDeviceName.iPhone_SE` and iPhone 8 Plus `IosDeviceName.iPhone_8_Plus` iOS devices
   bug-fix:
     - |
       `runner.getAllTestResults` now aborts unclosed tests
@@ -77,6 +86,8 @@ Apollo SDK:
     - Support UFG for native mobile
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
+    - |
+      Support iPhone SE `IosDeviceName.iPhone_SE` and iPhone 8 Plus `IosDeviceName.iPhone_8_Plus` iOS devices
   bug-fix:
     - |
       `runner.getAllTestResults` now aborts unclosed tests
