--- a/packages/execution-grid-client/package.json
+++ b/packages/execution-grid-client/package.json
@@ -17,8 +17,19 @@
       "default": "./dist/index.js",
       "types": "./types/index.d.ts"
     },
+    "./cli": {
+      "default": "./dist/cli.js",
+      "types": "./types/cli.d.ts"
+    },
     "./dist/*": "./dist/*.js",
     "./package.json": "./package.json"
+  },
+  "typesVersions": {
+    "*": {
+      "cli": [
+        "./types/cli.d.ts"
+      ]
+    }
   },
   "files": [
     "dist",
@@ -39,8 +50,8 @@
     }
   },
   "dependencies": {
-    "@applitools/logger": "1.1.2",
-    "@applitools/utils": "1.2.14",
+    "@applitools/logger": "1.1.3",
+    "@applitools/utils": "1.3.0",
     "http-proxy": "1.18.1",
     "node-fetch": "2.6.7",
     "raw-body": "2.5.1",
@@ -48,7 +59,6 @@
   },
   "devDependencies": {
     "@applitools/bongo": "^2.0.3",
-    "@applitools/eg-demo": "^1.0.2",
     "@types/http-proxy": "^1.17.8",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.31",
