--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -55,6 +55,7 @@
     "postversion": "bongo postversion"
   },
   "dependencies": {
+    "@applitools/execution-grid-client": "^1.1.5",
     "@applitools/eyes-sdk-core": "13.6.6",
     "@applitools/logger": "1.1.2",
     "@applitools/utils": "1.2.14",
@@ -83,7 +84,7 @@
     "pkg": "^5.6.0",
     "prettier": "^2.1.2",
     "ts-node": "^10.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.6.4"
   },
   "engines": {
     "node": ">=14.15.0"
