--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -55,7 +55,7 @@
     "postversion": "bongo postversion"
   },
   "dependencies": {
-    "@applitools/execution-grid-client": "^1.1.5",
+    "@applitools/execution-grid-client": "1.1.5",
     "@applitools/eyes-sdk-core": "13.6.6",
     "@applitools/logger": "1.1.2",
     "@applitools/utils": "1.2.14",
