--- a/packages/execution-grid-client/package.json
+++ b/packages/execution-grid-client/package.json
@@ -52,14 +52,14 @@
   "dependencies": {
     "@applitools/logger": "1.1.3",
     "@applitools/utils": "1.3.0",
-    "http-proxy": "1.18.1",
+    "abort-controller": "^3.0.0",
     "node-fetch": "2.6.7",
+    "proxy-agent": "^5.0.0",
     "raw-body": "2.5.1",
     "yargs": "17.4.1"
   },
   "devDependencies": {
     "@applitools/bongo": "^2.0.3",
-    "@types/http-proxy": "^1.17.8",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.31",
     "@types/node-fetch": "^2.6.1",
