--- a/packages/execution-grid-client/package.json
+++ b/packages/execution-grid-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/execution-grid-client",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "",
   "license": "SEE LICENSE IN LICENSE",
   "author": {
@@ -52,9 +52,9 @@
   "dependencies": {
     "@applitools/logger": "1.1.3",
     "@applitools/utils": "1.3.0",
-    "abort-controller": "^3.0.0",
+    "abort-controller": "3.0.0",
     "node-fetch": "2.6.7",
-    "proxy-agent": "^5.0.0",
+    "proxy-agent": "5.0.0",
     "raw-body": "2.5.1",
     "yargs": "17.4.1"
   },
