[eg-client] do not export cli from index

--- a/packages/execution-grid-client/package.json
+++ b/packages/execution-grid-client/package.json
@@ -26,9 +26,8 @@
   },
   "typesVersions": {
     "*": {
-      "cli": [
-        "./types/cli.d.ts"
-      ]
+      "cli": ["./types/cli.d.ts"],
+      "dist/*": ["./types/*.d.ts"]
     }
   },
   "files": [
