--- a/packages/execution-grid-client/package.json
+++ b/packages/execution-grid-client/package.json
@@ -42,6 +42,7 @@
     "lint": "eslint '**/*.ts'",
     "build": "tsc",
     "test": "mocha --no-timeouts -r ts-node/register ./test/**/*.spec.ts",
+    "test:e2e": "mocha --no-timeouts -r ts-node/register ./test/e2e/*.spec.ts",
     "deps": "bongo deps",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
@@ -53,7 +54,7 @@
     }
   },
   "dependencies": {
-    "@applitools/logger": "1.1.3",
+    "@applitools/logger": "1.1.4",
     "@applitools/utils": "1.3.0",
     "abort-controller": "3.0.0",
     "node-fetch": "2.6.7",
