--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Allow running with self-signed certificates
 "@applitools/eyes-selenium":
   feature:
     - |
@@ -24,11 +24,12 @@ Apollo SDK:
     - |
       Support iPhone SE `IosDeviceName.iPhone_SE` and iPhone 8 Plus `IosDeviceName.iPhone_8_Plus` iOS devices
   bug-fix:
-    - 
+    - Allow running with self-signed certificates
 "@applitools/eyes-playwright":
   feature:
     - |
       Support iPhone SE `IosDeviceName.iPhone_SE` and iPhone 8 Plus `IosDeviceName.iPhone_8_Plus` iOS devices
+    - Allow running with self-signed certificates
   bug-fix:
     - 
 "@applitools/eyes-protractor":
@@ -48,6 +49,7 @@ Apollo SDK:
     - accept ios and android lowercase as driver platformName capability when using custom grid
     - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
+    - Allow running with self-signed certificates
 "@applitools/eyes-puppeteer":
   feature:
     - Support UFG for native mobile
@@ -65,6 +67,7 @@ Apollo SDK:
     - accept ios and android lowercase as driver platformName capability when using custom grid
     - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
+    - Allow running with self-signed certificates
 "@applitools/eyes-testcafe":
   feature:
     - 
@@ -87,6 +90,7 @@ Apollo SDK:
     - accept ios and android lowercase as driver platformName capability when using custom grid
     - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
+    - Allow running with self-signed certificates
 "@applitools/eyes-cypress":
   feature:
     - 
@@ -97,6 +101,7 @@ Apollo SDK:
     - 
   bug-fix:
     - added `properties` and `notifyOnCompletion` as optional Types of Batch (for TS)
+    - Allow running with self-signed certificates
 "@applitools/eyes-webdriverio5-service":
   feature:
     - Support UFG for native mobile
@@ -105,6 +110,7 @@ Apollo SDK:
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
+    - Allow running with self-signed certificates
 eyes-browser-extension:
   feature:
     - 
