support `cy.eyesGetAllTestResults` in TS (#891)
* support `cy.eyesGetAllTestResults` in TS

* Update pending-changes.yaml

* Update eyes-index.d.ts

* TestResultsSummary type is from eyes-api

* Update pending-changes.yaml

* added TS sample test

* add TS basic test

* WIP simplify cypress ts test

* improve cypress ts test

* fix cypress ts test

* remove unnecessary line

* remove comments

* capitalize

Co-authored-by: Amit Zur <amit.zur@applitools.com>

--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -12,8 +12,11 @@
     "test:unit": "mocha --no-timeouts 'test/unit/**/*.test.js'",
     "test:it": "mocha --no-timeouts 'test/it/**/*.test.js'",
     "test:e2e": "mkdir -p test/fixtures/testAppCopies && mocha --no-timeouts 'test/e2e/**/*.test.js'",
+    "test:ts:compile": "tsc --project test/e2e/ts/cypress",
+    "test:ts:run": "cypress run --config-file test/e2e/ts/cypress-ts.json",
+    "test:ts": "yarn ts:compile && yarn ts:run",
     "lint": "eslint \"**/*.js\"",
-    "test": "yarn test:unit && yarn test:it && yarn test:e2e && yarn test:coverage",
+    "test": "yarn test:unit && yarn test:it && yarn test:e2e && yarn test:ts && yarn test:coverage",
     "cypress": "cypress open --config-file test/fixtures/cypress-play.json",
     "cypress:new": "node_modules/cypress-new/bin/cypress open --config-file test/fixtures/cypress-play.json",
     "cypress:run": "cypress run --config-file test/fixtures/cypress-play.json --spec=test/fixtures/testApp/cypress/integration-play/play.js",
