--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -70,6 +70,7 @@
     "@applitools/test-utils": "^1.3.2",
     "@applitools/types": "1.4.2",
     "@types/mocha": "^9.0.0",
+    "@types/node": "12",
     "@types/ws": "^7.4.4",
     "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
@@ -87,7 +88,7 @@
     "typescript": "^4.6.4"
   },
   "engines": {
-    "node": ">=14.15.0"
+    "node": ">=12.x"
   },
   "husky": {
     "hooks": {
