--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Added support for node versions >= 12.x
 "@applitools/eyes-selenium":
   feature:
     - |
