[driver] Fix an issue with viewport size on native devices (#894)
* use logger types

* [driver] fix viewport size calculation

* add logs for find element

* add test

* [driver] handle navigation bar size calculation

* [screenshoter] add test for screens without navbar on android

* fix typos

* add changelog entry

--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -65,8 +65,9 @@
     "png-async": "0.9.4"
   },
   "devDependencies": {
-    "@applitools/bongo": "^2.1.0",
-    "@applitools/driver": "1.8.2",
+    "@applitools/bongo": "^2.0.3",
+    "@applitools/driver": "^1.8.1",
+    "@applitools/logger": "^1.1.2",
     "@applitools/scripts": "1.1.0",
     "@applitools/spec-driver-webdriverio": "1.2.9",
     "@applitools/test-utils": "1.3.2",
