--- a/packages/driver/package.json
+++ b/packages/driver/package.json
@@ -73,6 +73,7 @@
     }
   },
   "dependencies": {
+    "@applitools/logger": "^1.1.1",
     "@applitools/snippets": "2.2.3",
     "@applitools/types": "1.4.2",
     "@applitools/utils": "1.3.0"
@@ -80,19 +81,19 @@
   "devDependencies": {
     "@applitools/bongo": "^2.1.0",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^16.3.3",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/node": "^17.0.31",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^4.3.7",
-    "mocha": "^9.0.3",
-    "prettier": "^2.3.2",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "mocha": "^10.0.0",
+    "prettier": "^2.6.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   },
   "engines": {
     "node": ">= 8.9.0"
