--- a/packages/driver/package.json
+++ b/packages/driver/package.json
@@ -73,7 +73,7 @@
     }
   },
   "dependencies": {
-    "@applitools/logger": "^1.1.1",
+    "@applitools/logger": "1.1.1",
     "@applitools/snippets": "2.2.3",
     "@applitools/types": "1.4.2",
     "@applitools/utils": "1.3.0"
