[logger] remove `chalk`'s types

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -75,7 +75,8 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - |
+      Fixed the error with importing `testcafe` module
 "@applitools/eyes-nightwatch":
   feature:
     - Support UFG for native mobile
